--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>QCM CACES – La réglementation</title>
+<title>QCM CACES – Les acteurs de prévention</title>
 <style>
   /* ---------- Thème & layout ---------- */
   :root { --orange:#ff6600; --noir:#222; --gris:#f3f3f3; }
@@ -74,7 +74,7 @@
 <body>
 
   <!-- Banniere + titre -->
-  <div class="banner" id="quizBanner">🚧 La réglementation 🚜</div>
+  <div class="banner" id="quizBanner">🚧 Les acteurs de prévention 🚜</div>
   <h1>ÉVALUATION</h1>
   <p class="subtitle" id="quizSubtitle">Répondez aux questions tirées au hasard</p>
 
@@ -109,7 +109,7 @@
    ============================ */
 
 /* Nom visible du quiz */
-const QUIZ_NAME = "La réglementation";
+const QUIZ_NAME = "Les acteurs de prévention";
 
 /* URL Google Apps Script (fourni) */
 const RESULTS_ENDPOINT = "https://script.google.com/macros/s/AKfycbzSnnlxH2dCzkVqobrQX-E4n4lo-WcxoDvmLHr7cLn35d4xploO_K3p9tNuY0OweRsW/exec";
